--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@
   --active-color: #404bbf;
   --border-color: #e7e9fc;
   --animation: 250ms;
+  --overlay-clr: #f4f4fd;
+  --modal-wndw-clr: #fcfcfc;
+  --modal-idx: 100%;
 }
 h1,
 h2,
@@ -54,6 +57,9 @@ body {
   border-bottom: 1px solid var(--border-color);
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 /*Navigation*/
@@ -430,6 +436,7 @@ body {
   color: var(--second-text-color);
   margin-left: 16px;
 }
+
 .app-collection {
   display: flex;
   flex-wrap: wrap;
@@ -437,10 +444,40 @@ body {
   row-gap: 48px;
   column-gap: 24px;
 }
-
 .collection-img {
   flex-basis: calc(100% / 3 - var(--collection-img-gap));
 }
+
+.wrapper {
+  position: relative;
+  overflow: hidden;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  transform: translateY(100%);
+  background-color: var(--button-color);
+  padding: 40px 32px;
+  transition: translateY var(--animation);
+}
+.collection-img:hover .overlay {
+  transform: translateY(0);
+}
+.overlay-text {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--overlay-clr);
+}
+
 .portfolio-link {
   text-decoration: none;
   display: block;
@@ -484,6 +521,7 @@ body {
 .customers-icons-link:hover,
 .customers-icons-link:focus {
   fill: var(--active-color);
+  border: 1px solid var(--active-color);
 }
 
 /* Footer */
@@ -534,7 +572,7 @@ body {
 .footer-social-link {
   width: 40px;
   height: 40px;
-  background-color: #8e8f99;
+  background-color: rgba(255, 255, 255, 0.1);
   fill: var(--primiry-white-color);
   border-radius: 50%;
   display: flex;
@@ -550,4 +588,61 @@ body {
 .footer-social-link:hover,
 .footer-social-link:focus {
   background-color: #31d0aa;
+}
+
+/* modal window */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+
+  width: 100%;
+  height: 100%;
+
+  z-index: var(--modal-idx);
+  background: rgba(46, 47, 66, 0.4);
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+  transition: opacity var(--animation) linear, visibility var(--animation);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-82%);
+  background-color: var(--modal-wndw-clr);
+  max-width: 408px;
+  min-height: 576px;
+  width: 100%;
+  padding: 30px;
+  border-radius: 4px;
+}
+
+/* box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2); */
+
+.modal-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translateX(-24px) translateY(24px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: var(--border-color);
+  border: none;
+}
+.modal-icon {
+  fill: var(--main-text-color);
 }
