--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
   --animation: 250ms;
   --overlay-clr: #f4f4fd;
   --modal-wndw-clr: #fcfcfc;
-  --modal-idx: 100%;
+  --modal-idx: 100;
 }
 h1,
 h2,
@@ -28,6 +28,7 @@ img {
   display: block;
 }
 body {
+  padding-top: 72px;
   font-family: 'Roboto', sans-serif;
   background-color: var(--primiry-white-color);
   color: var(--main-text-color);
@@ -60,6 +61,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
+  background-color: var(--primiry-white-color);
 }
 
 /*Navigation*/
@@ -216,7 +218,6 @@ body {
   border: 1px solid transparent;
 
   transition: background-color var(--animation);
-
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-secondary:hover,
@@ -595,7 +596,7 @@ body {
 .backdrop {
   position: fixed;
   top: 0;
-
+  left: 0;
   width: 100%;
   height: 100%;
 
