--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,20 @@ body {
 
 /*Navigation*/
 
+.current {
+  position: relative;
+  color: var(--active-color);
+}
+
+.current::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  border-color: #404bbf;
+  border-radius: 4px;
+}
 .logo,
 .footer-logo {
   font-family: 'Raleway';
@@ -224,6 +238,9 @@ body {
 .button-secondary:focus {
   background-color: var(--button-color);
   color: var(--primiry-white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 .button-secondary {
@@ -399,7 +416,7 @@ body {
   margin-bottom: 32px;
   margin-top: 8px;
 
-  transition: color var(--animation);
+  transition: background-color var(--animation);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:hover,
@@ -516,7 +533,7 @@ body {
   border-radius: 4px;
   outline: transparent;
 
-  transition: fill var(--animation);
+  transition: fill var(--animation) border var(--animation);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customers-icons-link:hover,
@@ -583,7 +600,7 @@ body {
   margin-top: 16px;
   gap: 16px;
 
-  transition: color var(--animation);
+  transition: background-color var(--animation);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-social-link:hover,
