--- a/css/style.css
+++ b/css/style.css
@@ -66,21 +66,6 @@ body {
 
 /*Navigation*/
 
-.current {
-  position: relative;
-  color: var(--active-color);
-}
-
-.current::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  border-color: #404bbf;
-  border-radius: 4px;
-}
 .logo,
 .footer-logo {
   font-family: 'Raleway';
@@ -116,6 +101,23 @@ body {
   transition: color var(--animation);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+.current {
+  position: relative;
+  color: var(--active-color);
+}
+
+.current ::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+
+  border-color: #404bbf;
+  border-radius: 4px;
+}
+
 .navigation-tools,
 .navigation {
   display: flex;
@@ -241,11 +243,11 @@ body {
   color: var(--primiry-white-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
+  border: transparent;
 }
 
 .button-secondary {
-  background-color: #f4f4fd;
+  background-color: var(--border-color);
   display: flex;
   font-weight: 500;
   line-height: 1.5;
@@ -256,10 +258,13 @@ body {
   text-align: center;
   letter-spacing: 0.04em;
   border: 1px solid #e7e9fc;
-  border-radius: 4px;
+
   flex-direction: row;
 
-  transition: background-color var(--animation);
+  border-radius: 4px;
+
+  transition: background-color var(--animation) color var(--animation)
+    box-shadow var(--animation);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .margin:not(:last-child) {
@@ -414,7 +419,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 32px;
+
   margin-top: 8px;
 
   transition: background-color var(--animation);
@@ -482,9 +487,9 @@ body {
   transform: translateY(100%);
   background-color: var(--button-color);
   padding: 40px 32px;
-  transition: translateY var(--animation);
+  transition: transform var(--animation);
 }
-.collection-img:hover .overlay {
+.portfolio-link:hover .overlay {
   transform: translateY(0);
 }
 .overlay-text {
