--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ body {
   color: var(--primiry-white-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  border: transparent;
+  border-color: transparent;
 }
 
 .button-secondary {
@@ -259,7 +259,7 @@ body {
   border-radius: 4px;
 
   transition: background-color var(--animation), color var(--animation),
-    box-shadow var(--animation);
+    box-shadow var(--animation), border var(--animation) linear;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .margin:not(:last-child) {
@@ -465,6 +465,8 @@ body {
 }
 .collection-img {
   flex-basis: calc(100% / 3 - var(--collection-img-gap));
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .wrapper {
@@ -487,6 +489,9 @@ body {
 .portfolio-link:hover .overlay {
   transform: translateY(0);
 }
+.portfolio-link:focus .overlay {
+  transform: translateY(0);
+}
 .overlay-text {
   font-family: 'Roboto';
   font-style: normal;
@@ -504,11 +509,6 @@ body {
 
   transition: box-shadow var(--animation);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-link:hover,
-.portfolio-link:focus {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 /* Customers */
